ki change hoise likhben

--- a/weather-apl.html
+++ b/weather-apl.html
@@ -20,10 +20,8 @@
     <h3 id="wind"></h3>
     <h3 id="pressure"></h3>
     <h3 id="icon"></h3>
-    <h3 id="sunrise"></h3>
   </div>
 
-  <script src="wather.js"></script>>
-  
+  <script src="wather.js"></script>
 </body>
 </html>
